--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -238,6 +238,36 @@
         }, 10000); // 5 seconds
     </script>
 
+{% if user.is_authenticated %}
+    <div class="modal fade" id="infoModal" tabindex="-1" role="dialog" aria-labelledby="infoModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="infoModalLabel">User Information</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p><strong>Name:</strong> {{ name }}</p>
+                    <p><strong>Class:</strong> {{ class }}</p>
+                    <p><strong>NPM:</strong> {{ npm }}</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Trigger the modal after the page loads -->
+    <script>
+        window.onload = function() {
+            $('#infoModal').modal('show');
+        }
+    </script>
+{% endif %}
+
     <!-- Bootstrap JS and dependencies (jQuery, Popper.js, Bootstrap JS) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
