--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -41,7 +41,7 @@
   {% if messages %}
   <ul style="list-style: none; padding: 0; margin-top: 1rem; font-family: 'Roboto', sans-serif;">
     {% for message in messages %}
-    <li style="color: red;">{{ message }}</li>
+    <li style="color: green;">{{ message }}</li>
     {% endfor %}
   </ul>
   {% endif %}
