--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -36,7 +36,7 @@
   {% if messages %}
   <ul style="list-style: none; padding: 0; margin-top: 1rem; font-family: 'Roboto', sans-serif; text-align: left;">
     {% for message in messages %}
-    <li style="color: red;">{{ message }}</li>
+    <li style="color: green;">{{ message }}</li>
     {% endfor %}
   </ul>
   {% endif %}
