--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -142,21 +142,42 @@
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
         <div class="container d-flex justify-content-between align-items-center">
             <a class="navbar-brand" href="#">GeorShop</a>
-            <div class="desktop-menu d-flex align-items-center">
-                <a href="#" class="nav-link">Home</a>
-                <a href="#" class="nav-link">Products</a>
-                <a href="#" class="nav-link">Categories</a>
-                <a href="#" class="nav-link">Cart</a>
-                <a href="#" class="nav-link" data-toggle="modal" data-target="#infoModal">Info</a>
-                <span class="nav-link">Welcome, {{ user.username }}</span>
-                <a href="{% url 'main:logout' %}" class="nav-link text-danger">Logout</a>
-                <div id="last-login" class="last-login ml-3">
-                    {% if last_login %}
-                        Last login: {{ last_login }}
-                    {% else %}
-                        First login!
-                    {% endif %}
-                </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon" style="color: white; border: 1px solid white; padding: 5px;">☰</span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Categories</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Cart</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link" data-toggle="modal" data-target="#infoModal">Info</a>
+                    </li>
+                    <li class="nav-item">
+                        <span class="nav-link">Welcome, {{ user.username }}</span>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'main:logout' %}" class="nav-link text-danger">Logout</a>
+                    </li>
+                    <li class="nav-item">
+                        <div id="last-login" class="last-login ml-3">
+                            {% if last_login %}
+                                Last login: {{ last_login }}
+                            {% else %}
+                                First login!
+                            {% endif %}
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
